test: jest for clarity icon

--- a/apps/seed/src/app/app.component.html
+++ b/apps/seed/src/app/app.component.html
@@ -1,1 +1,9 @@
 <nx-vmware-nx-welcome></nx-vmware-nx-welcome>
+
+<cds-icon shape="user"></cds-icon>
+
+<clr-alert [clrAlertType]="'warning'">
+  <clr-alert-item>
+    <span class="alert-text"> Try closing this alert. </span>
+  </clr-alert-item>
+</clr-alert>
