--- a/apps/seed/src/app/app.component.html
+++ b/apps/seed/src/app/app.component.html
@@ -7,3 +7,5 @@
     <span class="alert-text"> Try closing this alert. </span>
   </clr-alert-item>
 </clr-alert>
+
+<h1 class="!text-red-600">Hello tailwind</h1>
