consume shared ui component in seed app

--- a/apps/seed/src/app/app.component.html
+++ b/apps/seed/src/app/app.component.html
@@ -8,4 +8,6 @@
   </clr-alert-item>
 </clr-alert>
 
-<h1 class="!text-red-600">Hello tailwind</h1>
+<h1 class="!text-red-600 !mt-4">Hello tailwind</h1>
+
+<nx-vmware-test-ui></nx-vmware-test-ui>
