--- a/libs/shared-ui/src/lib/test-ui/test-ui.component.html
+++ b/libs/shared-ui/src/lib/test-ui/test-ui.component.html
@@ -1,3 +1,3 @@
-<p class="!text-blue-600">test-ui works tailwind blue!</p>
+<p class="!text-blue-600 !mt-4">test-ui works tailwind blue!</p>
 
 <button class="btn btn-primary">Clarity Primary button</button>
