--- a/apps/seed/src/app/app.component.html
+++ b/apps/seed/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nx-vmware-nx-welcome></nx-vmware-nx-welcome>
+<seed-nx-welcome></seed-nx-welcome>
 
 <cds-icon shape="user"></cds-icon>
 
@@ -10,4 +10,4 @@
 
 <h1 class="!text-red-600 !mt-4">Hello tailwind</h1>
 
-<nx-vmware-test-ui></nx-vmware-test-ui>
+<seed-test-ui></seed-test-ui>
